<resources>
    <!--采用驼峰命名法，名称应该准确说明字符串含义，如果有明确的作用域限制，则加上作用域前缀，尽量使用全称-->
    <!--每个模块都用 Begin&&End包含，示例通用字符串模块
        通用字符串统一写在开头
        每个模块写在相应的模块中
        模块下面的子项也采用类似的结构包裹进去
     -->


    <!--Begin-->
    <!--通用字符串-->
    <string name="app_name">校友圈</string>
    <string name="home">主页</string>
    <string name="ctc">人脉</string>
    <string name="findcc">发现圈子</string>
    <string name="msg">消息</string>
    <string name="mine">我的</string>
    <string name="back">返回</string>
    <string name="username">用户名</string>
    <string name="userpwd">密码</string>
    <string name="usercareer">用户职业</string>
    <string name="usermajor">用户专业</string>
    <string name="cancle">取消</string>
    <string name="search">搜索</string>
    <!--End-->

    <!--Begin-->
    <!--用于登录注册-->
    <string name="auth_register_back">返回</string>
    <string name="auth_register">用户注册</string>

    <string name="register_authphoneact_string1">很高兴认识您</string>
    <string name="register_authphoneact_string2">校友圈APP欢迎您的到来</string>
    <string name="register_authphoneact_inputphone">请输入您的手机号</string>
    <string name="register_authphoneact_inputpasswd">请输入您的密码</string>
    <string name="register_authphoneact_register">立即注册</string>

    <string name="register_authnameact_string1">请录入真实身份信息，我们将认证您的</string>
    <string name="register_authnameact_string2">东南大学校友身份</string>
    <string name="register_authnameact_inputname">请输入您的真实姓名</string>
    <string name="register_authnameact_next">下一步</string>

    <string name="register_authmajoract_string1">请录入真实身份信息，我们将认证您的</string>
    <string name="register_authmajoract_string2">东南大学校友身份</string>
    <string name="register_authmajoract_isstudent">我是在校生</string>
    <string name="register_authmajoract_isnotstudent">我已工作</string>

    <string name="register_authworkact_string1">您好，东南大学的校友</string>
    <string name="register_authworkact_string2">请输入您现在从事的工作</string>
    <string name="register_authworkact_company">请输入您所在公司名称</string>
    <string name="register_authworkact_post">请输入您的职务</string>
    <string name="register_authworkact_next">下一步</string>
    <!--End-->

    <!--Begin-->
    <!--用于主页home-->

    <!--End-->


    <!--Begin-->
    <!--用于人脉ctc-->
    <!--Begin-->
    <!--用于人脉详情-->
    <string name="ctc_contactdetailact_tilte">人脉详情</string>
    <string name="ctc_contactdetailact_leaveMsg">留言</string>

    <!--End-->
    <!--Begin-->
    <!--用于高级筛选-->
    <string name="hlyflt_highlyfilteract_highlyfilter">高级筛选</string>
    <string name="hlyflt_highlyfilteract_ensure">确定</string>
    <string name="hlyflt_highlyfilteract_majorfilter">专业筛选</string>
    <string name="hlyflt_highlyfilteract_yearfilter">年份筛选</string>
    <string name="hlyflt_highlyfilteract_locationfilter">地域筛选</string>
    <string name="hlyflt_highlyfilteract_back">返回</string>
    <string name="hlyflt_highlyfilteract_submit">提交</string>

    <!--End-->

    <!--End-->
    <!--Begin-->
    <!--用于发现圈子findcc-->
    <string name="findcc_ccdtl_invite">邀请</string>
    <string name="ccdtl_circledetail_member">成员：</string>
    <string name="set_resetnamehdimgact_title">修改名称及封面</string>
    <string name="fan_fansdialog_member">成员</string>
    <string name="fan_fansdialog_creator">创建人</string>
    <string name="fan_fansdialog_applyjoin">申请加入</string>
    <string name="fan_fansdialog_connectus">联系我们</string>
    <string name="fan_fansdialog_circlename">圈子名称</string>
    <string name="fan_fansdialog_intro">圈子简介</string>
    <!--End-->


    <!--End-->
    <!--End-->

    <!--Begin-->
    <!--用于消息msg-->
    <string name="msg_msgfgt_msg">私信</string>
    <string name="msg_msgfgt_notify">通知</string>
    <string name="msg_msgfgt_comment">评论</string>

    <!--End-->


    <!--Begin-->
    <!--用于我的mine-->
    <string name="mine_minefgt_collectcard">收藏的名片</string>
    <string name="mine_minefgt_joincircle">创建的圈子</string>
    <string name="mine_minefgt_admincircle">管理的圈子</string>
    <!--End-->
</resources>
