<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/auth_background">

    <!--置顶的布局-->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/transparent">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/auth_register"
            android:background="@color/transparent"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:singleLine="true"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="2dp"/>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="top"
            android:background="@color/transparent">
            <LinearLayout
                android:id="@+id/register_authnameact_back_llyt"
                android:orientation="horizontal"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="20"
                android:clickable="true"
                android:focusable="true"
                android:background="@color/transparent">
                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="@mipmap/auth_register_tlb_back"
                    android:scaleType="centerInside"
                    android:background="@color/transparent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp" />
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:text="@string/auth_register_back"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    android:singleLine="true"
                    android:gravity="center"
                    android:background="@color/transparent" />
            </LinearLayout>
            <!--填充背景的图片-->
            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="80"
                android:src="@color/transparent"
                android:scaleType="fitXY"
                android:background="@color/transparent"/>
        </LinearLayout>
    </FrameLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:src="@color/transparent"
        android:scaleType="fitXY"
        android:background="@color/transparent"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:singleLine="true"
            android:text="@string/register_authnameact_string1"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:background="@color/transparent"
            android:layout_gravity="left|center_vertical"
            android:gravity="left|center_vertical"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:singleLine="true"
            android:text="@string/register_authnameact_string2"
            android:textSize="22sp"
            android:textColor="@color/white"
            android:background="@color/transparent"
            android:layout_gravity="left|center_vertical"
            android:gravity="left|center_vertical"/>
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:src="@color/transparent"
        android:scaleType="fitXY"
        android:background="@color/transparent"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">
        <EditText
            android:id="@+id/register_authnameact_name_et"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:singleLine="true"
            android:textColor="@color/fontGrey"
            android:textSize="14sp"
            android:hint="@string/register_authnameact_inputname"
            android:textColorHint="@color/fontGrey"
            android:background="@drawable/register_edittext_shape"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:inputType="text"/>
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="12dp"
        android:src="@color/transparent"
        android:scaleType="fitXY"
        android:background="@color/transparent"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">
        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/register_authnameact_sex_spinner"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:spinnerMode="dropdown"
            android:scrollbars="none"
            android:background="@drawable/register_spinner_shape"/>
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="12dp"
        android:src="@color/transparent"
        android:scaleType="fitXY"
        android:background="@color/transparent"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">
        <Button
            android:id="@+id/register_authnameact_next_btn"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:text="@string/register_authnameact_next"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:singleLine="true"
            android:background="@drawable/register_button_shape"/>
    </LinearLayout>
</LinearLayout>