<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/auth_background"
    android:orientation="vertical">

    <!--置顶的布局-->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/transparent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="2dp"
            android:background="@color/transparent"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/auth_register"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="top"
            android:background="@color/transparent"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/register_authmajoract_back_llyt"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="20"
                android:background="@color/transparent"
                android:clickable="true"
                android:focusable="true"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:background="@color/transparent"
                    android:scaleType="centerInside"
                    android:src="@mipmap/auth_register_tlb_back" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:background="@color/transparent"
                    android:gravity="center"
                    android:singleLine="true"
                    android:text="@string/auth_register_back"
                    android:textColor="@color/white"
                    android:textSize="18sp" />
            </LinearLayout>
            <!--填充背景的图片-->
            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="80"
                android:background="@color/transparent"
                android:scaleType="fitXY"
                android:src="@color/transparent" />
        </LinearLayout>
    </FrameLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:background="@color/transparent"
        android:scaleType="fitXY"
        android:src="@color/transparent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/transparent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_gravity="left|center_vertical"
            android:background="@color/transparent"
            android:gravity="left|center_vertical"
            android:singleLine="true"
            android:text="@string/register_authmajoract_string1"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_gravity="left|center_vertical"
            android:background="@color/transparent"
            android:gravity="left|center_vertical"
            android:singleLine="true"
            android:text="@string/register_authmajoract_string2"
            android:textColor="@color/white"
            android:textSize="22sp" />
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:background="@color/transparent"
        android:scaleType="fitXY"
        android:src="@color/transparent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/transparent"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/register_authmajoract_college_spinner"
            android:layout_width="0dp"
            android:layout_height="46dp"
            android:layout_weight="1"
            android:background="@drawable/register_spinner_shape"
            android:scrollbars="none"
            android:spinnerMode="dropdown" />
        <ImageView
            android:layout_width="12dp"
            android:layout_height="match_parent"
            android:background="@color/transparent"
            android:scaleType="fitXY"
            android:src="@color/transparent" />
        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/register_authmajoract_major_spinner"
            android:layout_width="0dp"
            android:layout_height="46dp"
            android:layout_weight="1"
            android:background="@drawable/register_spinner_shape"
            android:scrollbars="none"
            android:spinnerMode="dropdown" />
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="12dp"
        android:background="@color/transparent"
        android:scaleType="fitXY"
        android:src="@color/transparent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/transparent"
        android:orientation="horizontal">
        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/register_authmajoract_year_spinner"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:spinnerMode="dropdown"
            android:scrollbars="none"
            android:background="@drawable/register_spinner_shape"/>
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="12dp"
        android:background="@color/transparent"
        android:scaleType="fitXY"
        android:src="@color/transparent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/transparent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/register_authmajoract_isstudent_btn"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:background="@drawable/register_button_shape"
            android:singleLine="true"
            android:text="@string/register_authmajoract_isstudent"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="12dp"
        android:background="@color/transparent"
        android:scaleType="fitXY"
        android:src="@color/transparent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/transparent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/register_authmajoract_isnotstudent_btn"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:background="@drawable/register_button_shape"
            android:singleLine="true"
            android:text="@string/register_authmajoract_isnotstudent"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>
</LinearLayout>