<?xml version="1.0" encoding="utf-8"?>
<!--
主页界面的实现
实现下边五个按钮对碎片的
切换
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.MainAct"
    android:background="@color/white"
    >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7.5"
        android:id="@+id/mainact_fgtcontainerflyt"
        >
        
    </FrameLayout>
    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.7"
        android:layout_gravity="bottom"
        android:orientation="horizontal"
        >
        <LinearLayout
            android:id="@+id/mainact_home_llyt"
            android:gravity="center_vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="30dp">
                <ImageView
                    android:id="@+id/mainact_home_img"
                    android:scaleType="centerInside"
                    android:src="@drawable/mainact_home_sele"
                    android:layout_centerInParent="true"
                    android:background="@color/transparent"
                    android:layout_width="30dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_height="30dp"
                    />
            </RelativeLayout>
            <TextView
                android:textColor="@color/main_act_grey"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:text="@string/home"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/mainact_ctc_llyt"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="30dp">
                <ImageView
                    android:scaleType="centerInside"
                    android:id="@+id/mainact_ctc_img"
                    android:src="@drawable/mainact_contacts_sele"
                    android:layout_centerInParent="true"
                    android:background="@color/transparent"
                    android:layout_width="30dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_height="30dp"
                    />
            </RelativeLayout>
            <TextView
                android:textColor="@color/main_act_grey"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:text="@string/ctc"
                />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/mainact_fcc_llyt"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="30dp">
                <ImageView
                    android:id="@+id/mainact_fcc_img"
                    android:scaleType="centerInside"
                    android:background="@color/transparent"
                   android:src="@drawable/mainact_findcircle_sele"
                    android:layout_centerInParent="true"
                    android:layout_width="39.3dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_height="30dp"
                    />
            </RelativeLayout>
            <TextView
                android:textColor="#AAAAAA"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:text="@string/findcc"
                />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/mainact_msg_llyt"

            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="30dp">

                <ImageView
                    android:id="@+id/mainact_msg_img"
                    android:src="@drawable/mainact_msg_sele"
                    android:scaleType="centerInside"
                    android:background="#00000000"
                    android:layout_width="30dp"
                    android:layout_height="28dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true" />
            </RelativeLayout>
            <TextView
                android:textColor="@color/main_act_grey"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:text="@string/msg"
                />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/mainact_mine_llyt"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            >
            <RelativeLayout

                android:layout_width="match_parent"
                android:layout_height="30dp">
                <ImageView
                    android:scaleType="centerInside"
                    android:id="@+id/mainact_mine_img"
                    android:src="@drawable/mainact_mine_sele"
                    android:background="#00000000"
                    android:layout_width="29dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_height="30dp"
                    android:layout_centerInParent="true"
                    />
            </RelativeLayout>
            <TextView
                android:textColor="#AAAAAA"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:text="@string/mine"
                />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>